# lalego

./: .gitignore  README.md  analyze_action_geometry.py  analyze_alt_id_geometry.py  analyze_code_examples.py  analyze_conditioning.py  analyze_latent_smoothness.py  config.py  debug_id_impl_compare.py  main.py  pyproject.toml  train.py  train_chunk_decoder_probe.py
module/: dataset.py  models.py  sigreg.py  utils.py
scripts/: analyze_code_label_alignment.py  analyze_codebook.py  analyze_latent_split.py  analyze_trial_code_summaries.py  benchmark_epic_kitchens_streaming.py  download_data.py  download_egocentric_subset.py  inspect_frames.py  precompute_maestro_chunks.py  predownload_epic_kitchens_100_clips.py  probe_code_histograms.py  probe_code_sequences.py
