[project]
name = "lalego"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "av>=14.4.0",
    "datasets>=4.0.0",
    "einops>=0.8.2",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.34.0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "safetensors>=0.6.0",
    "scikit-learn>=1.7.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "tqdm>=4.67.0",
    "transformers>=4.55.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
